# field-oriented-control

./: .gitignore  README.md
docs/: config.md
fpga/: .gitignore  Makefile  README.md
fpga/00-full-foc/: README.md
fpga/00-full-foc/docs/: config.md  debug.md  hall.md  hardware.md
fpga/00-full-foc/sim/: tb_bldc_plant.sv  tb_drv8316_spi.sv  tb_foc_pkg.sv  tb_hall_angle_est.sv  tb_inv_park.sv  tb_park.sv  tb_pi_controller.sv  tb_pwm_gen.sv  tb_sincos_lut.sv  tb_uart.sv  tb_xadc_iface.sv  xadc_stim.txt
fpga/00-full-foc/tcl/: build.tcl  program.tcl  program_flash.tcl
fpga/01-pwm-gen/: .gitignore  Makefile  README.md
fpga/01-pwm-gen/docs/: pwm.md
fpga/01-pwm-gen/rtl/: pwm_pkg.sv
fpga/01-pwm-gen/scripts/: simulate.sh
fpga/01-pwm-gen/sim/: tb_pwm_core.sv  tb_sync2.sv
fpga/01-pwm-gen/tcl/: build.tcl  program.tcl
fpga/01-pwm-gen/xdc/: arty_s7.xdc
fpga/02-can-bus/: .gitignore  Makefile  README.md  clockInfo.txt
fpga/02-can-bus/docs/: can_bus.md
fpga/02-can-bus/rtl/: can_pkg.sv
fpga/02-can-bus/scripts/: can_demo.py  simulate.sh
fpga/02-can-bus/sim/: tb_can_bus_top.sv  tb_cmd_parser.sv  tb_motor_model.sv  tb_telemetry_scheduler.sv
fpga/02-can-bus/tcl/: build.tcl  program.tcl
fpga/02-can-bus/xdc/: arty_s7.xdc
fpga/docs/: config.md  foc.md  hall.md  hardware.md  pwm.md
fpga/rtl/adc/: current_offset_cal.sv  xadc_iface.sv
fpga/rtl/foc/: clarke.sv  foc_core.sv  foc_pkg.sv  foc_top.sv  pi_controller.sv  svpwm.sv
fpga/rtl/hall/: hall_angle_est.sv  hall_decode.sv
fpga/rtl/pwm/: pwm_gen.sv
fpga/rtl/spi/: drv8316_spi.sv
fpga/scripts/: gen_sincos_lut.py  regress.sh  simulate.sh
fpga/sim/: bldc_plant.sv  tb_clarke.sv  tb_cmd_telemetry.sv  tb_current_offset_cal.sv  tb_dq_limit.sv  tb_foc_core.sv  tb_foc_top.sv  tb_hall_angle_est.sv  tb_hall_decode.sv  tb_svpwm.sv  tb_transform_chain.sv
fpga/tcl/: program.tcl
fpga/xdc/: arty_s7.xdc
stm32/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
stm32/bsp/: bsp.h
stm32/bsp/nucleo_h755zi_q/: board.c  board.cmake  board.h  clock.c  main.h  periph.c  stm32h7xx_hal_conf.h  stm32h7xx_it.c  stm32h7xx_it.h
stm32/cmake/: arm-gcc-toolchain.cmake
stm32/scripts/: build_flash.sh
stm32/src/: main.c
stm32/src/arm/: arm_pos.c  arm_pos.h
stm32/src/can/: can.c  can.h
stm32/src/cli/: cli.c  cli.h
stm32/src/common/: bbox.c  bbox.h  debug.h  settings.h
stm32/src/control/: foc.c  foc.h  foc_math.c  foc_math.h  pid.c  pid.h
stm32/src/drv8316/: drv8316.c  drv8316.h
stm32/src/encoder/: encoder.c  encoder.h
stm32/src/fault/: fault.c  fault.h
stm32/src/hall/: hall.c  hall.h
stm32/tools/bbox/: README.md  bbox_dump.py
stm32/tools/can_gui/: README.md  foc_can.py  foc_can_gui.py  requirements.txt
(+22 files in other folders)
